# napari-simple-pixel-classifier

./: README.md  setup.cfg  tox.ini
src/napari_simple_pixel_classifier/: napari.yaml
src/napari_simple_pixel_classifier/_tests/: test_widget.py
